--- a/app/Components/Components.css
+++ b/app/Components/Components.css
@@ -320,6 +320,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .PartidasFinalizadas {
   display: flex;
