--- a/app/Components/Components.css
+++ b/app/Components/Components.css
@@ -455,6 +455,9 @@
 .fotosDaSecaoDeFotos {
   height: 500px;
 }
+.grafico {
+  zoom: 1;
+}
 
 @media (max-width: 1000px) {
   .Estatisticas {
@@ -481,6 +484,9 @@
   .fotosDaSecaoDeFotos {
     height: 400px;
   }
+  .grafico {
+    zoom: 0.7;
+  }
 }
 
 @media (max-width: 650px) {
@@ -498,6 +504,17 @@
   }
   .fotosDaSecaoDeFotos {
     height: 300px;
+  }
+  .NomeSecao {
+    font-size: 16px;
+  }
+  .HeaderSectionMain {
+    height: 50px;
+  }
+  .VermaisBtn {
+    width: 100px;
+    height: 30px;
+    font-size: 16px;
   }
 }
 @media (max-width: 520px) {
@@ -520,5 +537,11 @@
   }
   .fotosDaSecaoDeFotos {
     height: 200px;
+  }
+  .barraPesquisa {
+    width: 200px;
+  }
+  .grafico {
+    zoom: 0.5;
   }
 }
