--- a/app/Components/Components.css
+++ b/app/Components/Components.css
@@ -270,6 +270,7 @@
   height: 50px;
   align-items: center;
   justify-content: space-between;
+  margin: 0;
 }
 .VermaisBtn {
   background-color: var(--corazul);
@@ -435,7 +436,7 @@
   gap: 20px;
 }
 .glowBagreDeOuro {
-  width: 1200px;
+  width: 800px;
 }
 
 .newsSwipe {
@@ -458,6 +459,20 @@
 .grafico {
   zoom: 1;
 }
+.bagredeourocard {
+  zoom: 1;
+}
+.NewsComponents {
+  gap: 50px;
+  margin: 20px;
+}
+
+
+@media (max-width: 1149px) {
+  .NewsContainer {
+    padding-bottom: 20px;
+  }
+}
 
 @media (max-width: 1000px) {
   .Estatisticas {
@@ -473,7 +488,7 @@
   }
   .newsSwipe {
     width: 500px;
-    height: 300px;
+    height: 100%;
   }
   .swipeee {
     height: 350px;
@@ -491,13 +506,17 @@
 
 @media (max-width: 650px) {
   .glowBagreDeOuro {
-    display: none;
+    width: 500px;
+  }
+  .bagredeourocard {
+    zoom: 1.6;
   }
 
   .barraPesquisa {
     width: 300px;
     padding: 10px;
-    height: 50px;
+    height: 30px;
+    font-size: 10px;
   }
   .MainCard {
     zoom: 0.6;
@@ -510,14 +529,22 @@
   }
   .HeaderSectionMain {
     height: 50px;
+    justify-content: space-around;
   }
   .VermaisBtn {
     width: 100px;
     height: 30px;
-    font-size: 16px;
+    font-size: 12px;
+    border-radius: 5px;
   }
 }
 @media (max-width: 520px) {
+  .glowBagreDeOuro {
+    width: 400px;
+  }
+  .bagredeourocard {
+    zoom: 2;
+  }
   .NoticiaMensagem {
     font-size: 10px;
   }
@@ -526,11 +553,12 @@
   }
 
   .newsSwipe {
-    width: 300px;
-    height: 200px;
+    width: 100vw;
+    height: 100%;
   }
   .swipeee {
-    height: 210px;
+    width: 100vw;
+    height: 100%;
   }
   .noticiaSombra {
     opacity: 50%;
@@ -543,5 +571,23 @@
   }
   .grafico {
     zoom: 0.5;
+  }
+  .NewsComponents {
+    gap: 10px;
+    margin: 0;
+  }
+}
+
+@media (max-width: 450px) {
+  .glowBagreDeOuro {
+    width: 380px;
+  }
+}
+@media (max-width: 380px) {
+  .bagredeourocard {
+    zoom: 1.5;
+  }
+  .glowBagreDeOuro {
+    width: 300px;
   }
 }
