--- a/app/Components/Components.css
+++ b/app/Components/Components.css
@@ -78,10 +78,12 @@
 /*NewsComponente*/
 
 .imgNews {
-  background-color: rgb(255, 0, 0);
   width: 100%;
   height: 100%;
+  display: flex;
+  transition: all 0.5s;
 }
+
 .NoticiaMensagem {
   font-size: 17px;
   font-weight: 400;
@@ -204,6 +206,18 @@
   justify-content: center;
   gap: 25px;
   flex-wrap: wrap;
+}
+/*Banner*/
+.BannerSave {
+  position: absolute;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-left: 500px;
+  padding: 30px;
+  gap: 10px;
 }
 
 /*Confronto*/
@@ -440,20 +454,29 @@
 }
 
 .newsSwipe {
+  height: 400px;
+
   width: 700px;
-  height: 500px;
   justify-content: center;
   display: flex;
   align-items: center;
 }
-.swipeee {
-  height: 440px;
-  position: relative;
-  background-color: rgb(0, 0, 0);
+.newsSwipe:hover .imgNews {
+  transform: scale(1.05);
 }
 .noticiaSombra {
   height: 400px;
+  background-image: linear-gradient(to top, #000000ac, transparent);
+  transition: all 0.5s;
 }
+.newsSwipe:hover .noticiaSombra {
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.826), transparent);
+}
+.swipeee {
+  position: relative;
+  height: 400px;
+}
+
 .fotosDaSecaoDeFotos {
   height: 500px;
 }
@@ -468,9 +491,29 @@
   margin: 20px;
 }
 
+@media (max-width: 1550px) {
+  .glowBagreDeOuro {
+    width: 500px;
+  }
+}
+@media (max-width: 1550px) {
+  .glowBagreDeOuro {
+    width: 400px;
+  }
+}
+@media (max-width: 1214px) {
+  .glowBagreDeOuro {
+    width: 300px;
+  }
+}
 @media (max-width: 1149px) {
   .NewsContainer {
     padding-bottom: 20px;
+  }
+}
+@media (max-width: 1089px) {
+  .glowBagreDeOuro {
+    width: 700px;
   }
 }
 
@@ -505,6 +548,18 @@
 }
 
 @media (max-width: 650px) {
+  .BannerSave {
+    position: absolute;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 0px;
+    margin-top: 700px;
+    padding: 30px;
+    gap: 10px;
+  }
   .glowBagreDeOuro {
     width: 500px;
   }
